fix: add icon on tile on mobile #10322

--- a/collective/rcse/resources/dev/less/mobile.less
+++ b/collective/rcse/resources/dev/less/mobile.less
@@ -20,10 +20,16 @@ dd.portletItem{margin-left:0}
         margin-top:0;
         margin-bottom:0;
     }
-    span:before{
+    .icon{
+	font-size: 200%;
+    }
+    .icon:before{
+	margin-left: 0;
+    }
+    .date:before{
         content:"le ";
     }
-    span:after{
+    .date:after{
         content:" - ";
     }
     a.group{
